tests/negative/typecheck/infer-fail.orng
fn main() -> Int {
    let x = .lol
    0
}